# flink-estimator

./: .gitignore  AGENTS.md  PRD.md  README.md  checklist.md  docker-compose.yml  pyrightconfig.json  run.sh
.github/workflows/: docker-publish.yaml
src/: Dockerfile  build.sh  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements.txt
src/flink_estimator/: __init__.py  estimation.py  estimation_old.py  main.py  models.py
src/static/: style.css
src/templates/: base.html  considerations.html  estimation.html  home.html  index.html  results.html  saved.html
src/tests/: __init__.py  test_basic_estimation.py  test_estimation_logic.py
src/tests/ut/: test_basic_estimation.py  test_estimation_logic.py
