[project]
name = "flink-estimator"
authors = [
    {name = "jbcodeforce",email = "jboyer@confluent.io"}
]
version = "0.1.0"
description = "Flink CP estimator"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.20",
    "uvicorn>=0.35.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["flink_estimator*"]

[tool.setuptools.package-data]
flink_estimator = ["py.typed"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"